# chip8-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: chip8.cpp  chip8.h  interface.cpp
test/: out.ch8
